--- a/01-proyecto-inicial/01-proyecto-inicial/src/app/tareas/tareas.component.html
+++ b/01-proyecto-inicial/01-proyecto-inicial/src/app/tareas/tareas.component.html
@@ -1,15 +1,19 @@
+@if(estaAgregandoTareaNueva){
+<app-nueva-tarea />
+}
+
 <section id="tareas">
   <header>
     <h2>Tareas de {{ nombre }}</h2>
     <menu>
-      <button>Agregar Tarea Nueva</button>
+      <button (click)="alIniciarNuevaTarea()">Agregar Tarea Nueva</button>
     </menu>
   </header>
 
   <ul>
     @for (tarea of tareasUsuarioSeleccionado; track tarea.id) {
     <li>
-      <app-tarea [tarea]="tarea" />
+      <app-tarea [tarea]="tarea" (terminada)="alCompletarTarea($event)" />
     </li>
     }
   </ul>
