--- a/01-proyecto-inicial/01-proyecto-inicial/src/app/tareas/tareas.component.html
+++ b/01-proyecto-inicial/01-proyecto-inicial/src/app/tareas/tareas.component.html
@@ -1,5 +1,8 @@
 @if(estaAgregandoTareaNueva){
-<app-nueva-tarea />
+<app-nueva-tarea
+  (cancelar)="alCancelarTareaNueva()"
+  (agregar)="alAgregarTarea($event)"
+/>
 }
 
 <section id="tareas">
