--- a/01-proyecto-inicial/01-proyecto-inicial/src/app/tareas/tareas.component.html
+++ b/01-proyecto-inicial/01-proyecto-inicial/src/app/tareas/tareas.component.html
@@ -1,8 +1,5 @@
 @if(estaAgregandoTareaNueva){
-<app-nueva-tarea
-  (cancelar)="alCancelarTareaNueva()"
-  (agregar)="alAgregarTarea($event)"
-/>
+<app-nueva-tarea [idUsuario]="idUsuario" (cerrar)="alCerrarTareaNueva()" />
 }
 
 <section id="tareas">
@@ -16,7 +13,7 @@
   <ul>
     @for (tarea of tareasUsuarioSeleccionado; track tarea.id) {
     <li>
-      <app-tarea [tarea]="tarea" (terminada)="alCompletarTarea($event)" />
+      <app-tarea [tarea]="tarea" />
     </li>
     }
   </ul>
