--- a/03-calculador-de-inversiones/03-calculador-de-inversiones/src/app/app.component.html
+++ b/03-calculador-de-inversiones/03-calculador-de-inversiones/src/app/app.component.html
@@ -2,3 +2,6 @@
 <app-ingreso-usuario
   (calcular)="alCalcularResultadosInversion($event)"
 ></app-ingreso-usuario>
+<app-resultados-inversion
+  [resultados]="infoResultados"
+></app-resultados-inversion>
