--- a/05-dashboard/05-dashboard/src/app/app.component.html
+++ b/05-dashboard/05-dashboard/src/app/app.component.html
@@ -13,14 +13,14 @@
       [imagen]="{ src: 'globo.png ', alt: 'Un globo ' }"
       titulo="trafico"
     >
-      <app-estado-servidor></app-estado-servidor>
+      <app-trafico></app-trafico>
     </app-dashboard-elemento>
 
     <app-dashboard-elemento
       [imagen]="{ src: 'lista.png ', alt: 'Una lista de elementos ' }"
       titulo="Registro de soportes"
     >
-      <app-estado-servidor></app-estado-servidor>
+      <app-registros></app-registros>
     </app-dashboard-elemento>
   </div>
 </main>
