--- a/05-dashboard/05-dashboard/src/app/dashboard/dashboard-elemento/dashboard-elemento.component.html
+++ b/05-dashboard/05-dashboard/src/app/dashboard/dashboard-elemento/dashboard-elemento.component.html
@@ -4,5 +4,6 @@
       <img [src]="imagen().src" [alt]="imagen().alt" />
       <h2>{{ titulo() }}</h2>
     </header>
+    <ng-content />
   </article>
 </div>
