--- a/05-dashboard/05-dashboard/src/app/encabezado/encabezado.component.html
+++ b/05-dashboard/05-dashboard/src/app/encabezado/encabezado.component.html
@@ -12,10 +12,7 @@
         <a href="/">Administración</a>
       </li>
       <li>
-        <button>
-          <span> Salir </span>
-          <span class="icono"> → </span>
-        </button>
+        <app-boton></app-boton>
       </li>
     </ul>
   </nav>
