--- a/05-dashboard/05-dashboard/src/app/compartida/boton/boton.component.html
+++ b/05-dashboard/05-dashboard/src/app/compartida/boton/boton.component.html
@@ -1,4 +1,2 @@
-<button>
-  <span> Salir </span>
-  <span class="icono"> → </span>
-</button>
+<span> <ng-content /> </span>
+<ng-content select=".icono" />
