--- a/05-dashboard/05-dashboard/src/app/dashboard/registros/nuevo-registro/nuevo-registro.component.html
+++ b/05-dashboard/05-dashboard/src/app/dashboard/registros/nuevo-registro/nuevo-registro.component.html
@@ -8,9 +8,9 @@
     <textarea name="pedido" id="pedido" row="3"> </textarea>
   </p>
   <p>
-    <button>
-      <span> Enviar </span>
-      <span class="icono"> → </span>
+    <button appButton>
+      Enviar
+      <span class="icono">→</span>
     </button>
   </p>
 </form>
