--- a/05-dashboard/05-dashboard/src/app/encabezado/encabezado.component.html
+++ b/05-dashboard/05-dashboard/src/app/encabezado/encabezado.component.html
@@ -12,7 +12,7 @@
         <a href="/">Administración</a>
       </li>
       <li>
-        <app-boton></app-boton>
+        <button appButton>Salir <span class="icono">→</span></button>
       </li>
     </ul>
   </nav>
