--- a/05-dashboard/05-dashboard/src/app/compartida/boton/boton.component.html
+++ b/05-dashboard/05-dashboard/src/app/compartida/boton/boton.component.html
@@ -1,2 +1,6 @@
-<span> <ng-content /> </span>
-<ng-content select=".icono" />
+<span>
+  <ng-content />
+</span>
+<span class="icono">
+  <ng-content select="icono" />
+</span>
