--- a/05-dashboard/05-dashboard/src/app/dashboard/registros/nuevo-registro/nuevo-registro.component.html
+++ b/05-dashboard/05-dashboard/src/app/dashboard/registros/nuevo-registro/nuevo-registro.component.html
@@ -1,16 +1,16 @@
 <form>
-  <p>
-    <label for="titulo">Titulo</label>
+  <app-control etiqueta="Título">
+    <!-- <label for="titulo">Titulo</label> -->
     <input name="titulo" id="titulo" type="text" />
-  </p>
-  <p>
-    <label for="pedido">Pedido</label>
+  </app-control>
+  <app-control etiqueta="Pedido">
+    <!-- <label for="pedido">Pedido</label> -->
     <textarea name="pedido" id="pedido" row="3"> </textarea>
-  </p>
+  </app-control>
   <p>
     <button appButton>
       Enviar
-      <span class="icono">→</span>
+      <span ngProjectAs="icono">→</span>
     </button>
   </p>
 </form>
