--- a/05-dashboard/05-dashboard/src/app/dashboard/estado-servidor/estado-servidor.component.html
+++ b/05-dashboard/05-dashboard/src/app/dashboard/estado-servidor/estado-servidor.component.html
@@ -1,4 +1,4 @@
-<div>
+<div id="estado">
   @if (estadoActual === 'online') {
   <p>Los servidores están conectados</p>
   <p>Todos los sistemas están operativos.</p>
