--- a/05-dashboard/05-dashboard/src/app/compartida/control/control.component.html
+++ b/05-dashboard/05-dashboard/src/app/compartida/control/control.component.html
@@ -1,4 +1,4 @@
-<p>
+<p class="control">
   <label for="titulo">{{ etiqueta() }}</label>
   <ng-content select="input, textarea" />
   <!-- <input name="titulo" id="titulo" type="text" /> -->
