taking inputs in angular

--- a/05-dashboard/05-dashboard/src/app/dashboard/registros/nuevo-registro/nuevo-registro.component.html
+++ b/05-dashboard/05-dashboard/src/app/dashboard/registros/nuevo-registro/nuevo-registro.component.html
@@ -1,7 +1,7 @@
-<form>
+<form (ngSubmit)="alEnviar(tituloIngresado)">
   <app-control etiqueta="Título">
     <!-- <label for="titulo">Titulo</label> -->
-    <input name="titulo" id="titulo" type="text" />
+    <input name="titulo" id="titulo" type="text" #tituloIngresado />
   </app-control>
   <app-control etiqueta="Pedido">
     <!-- <label for="pedido">Pedido</label> -->
