--- a/09-pipes/src/app/app.component.html
+++ b/09-pipes/src/app/app.component.html
@@ -7,7 +7,7 @@
         <p>{{ fechaActual | date : "medium" }}</p>
       </div>
     </header>
-    <p>Nueva York: {{ temperaturasActuales.nuevaYork | number : "1.1-2" }}</p>
+    <p>Nueva York: {{ temperaturasActuales.nuevaYork | temp }}</p>
     <p>Berlín: {{ temperaturasActuales.berlin | number : "1.1-2" }}</p>
     <p>París: {{ temperaturasActuales.paris | number : "1.1-2" }}</p>
     <p>Chicago: {{ temperaturasActuales.chicago | number : "1.1-2" }}</p>
