parametros en pipes personalizadas

--- a/09-pipes/src/app/app.component.html
+++ b/09-pipes/src/app/app.component.html
@@ -7,7 +7,9 @@
         <p>{{ fechaActual | date : "medium" }}</p>
       </div>
     </header>
-    <p>Nueva York: {{ temperaturasActuales.nuevaYork | temp }}</p>
+    <p>
+      Nueva York: {{ temperaturasActuales.nuevaYork | temp : "cel" : "fah" }}
+    </p>
     <p>Berlín: {{ temperaturasActuales.berlin | number : "1.1-2" }}</p>
     <p>París: {{ temperaturasActuales.paris | number : "1.1-2" }}</p>
     <p>Chicago: {{ temperaturasActuales.chicago | number : "1.1-2" }}</p>
