pipes puras e impuras

--- a/09-pipes/src/app/app.component.html
+++ b/09-pipes/src/app/app.component.html
@@ -25,8 +25,8 @@
       </div>
     </header>
     <ul>
-      @for (temperatura of temperaturasHistoricas | ordenar; track temperatura)
-      {
+      @for (temperatura of temperaturasHistoricas | ordenar:"desc"; track
+      temperatura) {
       <li (click)="reiniciarTemperatura($index)">
         {{ temperatura | temp : "cel" }}
       </li>
