sintaxis alternativa para inyeccion de dependencias

--- a/10-servicios/src/app/tareas/lista-tareas/lista-tareas.component.html
+++ b/10-servicios/src/app/tareas/lista-tareas/lista-tareas.component.html
@@ -11,9 +11,9 @@
 </header>
 
 <ul>
-  @for (tarea of tareas; track tarea) {
-    <li>
-      <app-item-tarea [tarea]="tarea" />
-    </li>
+  @for (tarea of tareas(); track tarea.id) {
+  <li>
+    <app-item-tarea [tarea]="tarea" />
+  </li>
   }
-</ul> 
+</ul>
