convertir observables a signals

--- a/12 - rxjs/12 - rxjs/src/app/app.component.html
+++ b/12 - rxjs/12 - rxjs/src/app/app.component.html
@@ -3,5 +3,13 @@
 <p>Trabajando con "Flujos de Datos".</p>
 
 <p>
-  <button>Hacer clic</button>
+  <button (click)="alClickear()">Hacer clic</button>
+</p>
+
+<p>
+  {{ cuentaClicks() }}
+</p>
+
+<p>
+  {{ signalIntevalo() }}
 </p>
