--- a/12-cliente-http/12-cliente-http/src/app/lugares/lugares-disponibles/lugares-disponibles.component.html
+++ b/12-cliente-http/12-cliente-http/src/app/lugares/lugares-disponibles/lugares-disponibles.component.html
@@ -1,7 +1,12 @@
 <app-contenedor-lugares titulo="Lugares Disponibles">
-  @if (estaRecibiendo()) {
+  @if (estaRecibiendo() && !error()) {
     <p class="texto-respaldo">Cargando lugares disponibles...</p>
   }
+
+  @if (error()) {
+    <p class="texto-respaldo">{{ error() }}</p>
+  }
+
   @if (lugares()) {
     <app-lugares [lugares]="lugares()!" />
   } @else if (lugares()?.length === 0) {
