--- a/12-cliente-http/12-cliente-http/src/app/lugares/lugares-disponibles/lugares-disponibles.component.html
+++ b/12-cliente-http/12-cliente-http/src/app/lugares/lugares-disponibles/lugares-disponibles.component.html
@@ -8,7 +8,10 @@
   }
 
   @if (lugares()) {
-    <app-lugares [lugares]="lugares()!" />
+    <app-lugares
+      [lugares]="lugares()!"
+      (seleccionarLugar)="alSeleccionarlugar($event)"
+    />
   } @else if (lugares()?.length === 0) {
     <p class="texto-respaldo">Desafortunadamente no se encontraron lugares.</p>
   }
