--- a/12-cliente-http/12-cliente-http/src/app/lugares/lugares-usuario/lugares-usuario.component.html
+++ b/12-cliente-http/12-cliente-http/src/app/lugares/lugares-usuario/lugares-usuario.component.html
@@ -12,7 +12,7 @@
       [lugares]="lugares()!"
       (seleccionarLugar)="alEliminarLugar($event)"
     />
-  } @else if (lugares()?.length === 0) {
+  } @else if (lugares().length === 0) {
     <p class="texto-respaldo">Desafortunadamente no se encontraron lugares.</p>
   }
 </app-contenedor-lugares>
